@@ -121,9 +121,10 @@ cd "${targetDirectory}/.."
 
 # Define all of the derived paths we'll need.
 workDirectory="${targetDirectory}/server-work"
-serverLauncher="${workDirectory}/$(ls ${workDirectory} | grep '^bfd-server-launcher-.*\.jar$')"
+serverLauncher=$(echo ${workDirectory}/bfd-server-launcher-*/bfd-server-launcher.sh)
 serverPortsFile="${workDirectory}/server-ports.properties"
 serverLog="${workDirectory}/server-console.log"
+gcLog="${workDirectory}/gc.log"
 warArtifact="${targetDirectory}/$(ls ${targetDirectory} | grep '^bfd-server-war-.*\.war$')"
 keyStore="${scriptDirectory}/../../../../dev/ssl-stores/server-keystore.jks"
 trustStore="${scriptDirectory}/../../../../dev/ssl-stores/server-truststore.jks"
@@ -170,15 +171,17 @@ else
 fi
 
 # To enable JVM debugging, uncomment and add this line to the server start command below.
-#	-Dcapsule.jvm.args="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8083" \
+#	"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8083" \
 
 # Launch the server in the background.
 BFD_PORT="${serverPortHttps}" \
 	BFD_KEYSTORE="${keyStore}" \
 	BFD_TRUSTSTORE="${trustStore}" \
 	BFD_WAR="${warArtifact}" \
-	"${javaHome}/bin/java" \
+	BFD_JAVA_HOME="${javaHome}" \
+	"${serverLauncher}" \
 	"${maxHeapArg}" \
+	"-Xlog:gc*:${gcLog}:time,level,tags" \
 	"-Dbfd-server-${bfdServerId}" \
 	"-DbfdServer.db.url=${dbUrl}" \
 	"-DbfdServer.v2.enabled=${v2Enabled}" \
@@ -186,7 +189,6 @@ BFD_PORT="${serverPortHttps}" \
 	"-DbfdServer.db.username=" \
 	"-DbfdServer.db.password=" \
 	"-DbfdServer.db.schema.apply=true" \
-	-jar "${serverLauncher}" \
 	>"${serverLog}" 2>&1 \
 	&
 
